--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="public/styles/style.css">
+    <link rel="stylesheet" href="./public/styles/style.css">
     <title>Document</title>
 
 </head>
@@ -67,9 +67,9 @@
 
     </main>
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
-    <script src="public/scripts/jquery.easy-autocomplete.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="public/pokemon.json"></script>
+    <script src="./public/scripts/jquery.easy-autocomplete.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="./public/pokemon.json"></script>
 
-    <script src="public/scripts/app.js"></script>
+    <script src="./public/scripts/app.js"></script>
 </body>
 </html>
