updated file paths

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <p>Choose your Pokemon</p>
                         <input type="text" class="firstPokemon" id="provider-json" required/>
                         <figure class="pokemonImage pokemonImage1">
-                            <img class="oneImage" src="public/assets/pokeball.png" alt="">
+                            <img class="oneImage" src="./public/assets/pokeball.png" alt="">
                         </figure>
                         <div class="pokemonStats pokemonOneStats">
                             <div class="left">
@@ -39,7 +39,7 @@
                         <p>Choose your Pokemon</p>
                         <input type="text" class="secondPokemon" id="provider-json" required />
                         <figure class="pokemonImage pokemonImage2">
-                            <img class="twoImage" src="public/assets/pokeball.png" alt="">
+                            <img class="twoImage" src="./public/assets/pokeball.png" alt="">
                         </figure>
                         <div class="pokemonStats pokemonTwoStats">
                             <div class="left">
